   While the socket is still connected, Cantata will wait up to 4 times the
   timeout value. Therefore, the actual timeout has increased to 2minutes!
6. If a sidebar view has focus, but sidebar is collapsed, then find action
   should activate playqueue search widget.
7. FreeBSD 1.0 compile fixes.
8. Fix scaling of context view background when size of view changes.

1.3.0.1
-------
1. Fix duplicate translations - causes KDE builds to fail.

1.3.0
-----
 1. Add option to control startup-state; visible, hidden, or remembered from
    previous run.
 2. Basic undo/redo support for playqueue.
 3. Search tab. Hidden by default, enable via settings dialog.
 4. Optionally save scaled covers (used in artist and albums views) to disk.
 5. Add option to always collapse context into single pane.
 6. Option to have small sidebar at top or bottom.
 7. Scale context view backdrops.
 8. Add a manual config item (mpdPoll) to control whether Cantata should poll
    MPD for its current state whilst playing. The value is specified in
    seconds. This is useful for cases where Cantata misses updates from MPD.
    This is only a work-around for certain scenarios. Please see README for
    more details.
 9. When sending commands to MPD, and waiting for response, use a timeout of 2
    seconds per 100K bytes of data.
10. Hide volume control if MPD returns a negative value for volume - which
    indicates MPD's volume mixer is disabled.
11. When closing search widget, after performing a search, collapse all bar top
    level items.
12. When adding files to playqueue, only add in batches of up to 10000 songs.
    This 'chunk size' may be altered by setting mpdListSize in Cantata's config
    file - see README for details.
13. Add 'Remove duplicates' functionality to play queue and play lists.
14. Only start internal HTTP server when required, and stop 1 second after
    last Cantata stream is removed.
15. If connected to MPD via a UNIX-domain socket, then send non-MPD files as