@@ -28,6 +28,7 @@
    should activate playqueue search widget.
 7. FreeBSD 1.0 compile fixes.
 8. Fix scaling of context view background when size of view changes.
+9. Elide text of context view selector buttons, if insufficient space.
 
 1.3.0.1
 -------
